--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,12 @@ jobs:
     - name: 设置Android SDK
       uses: android-actions/setup-android@v3
       with:
-        api-level: 33
-        build-tools: 33.0.2
-        ndk: 25.2.9519653
+        cmdline-tools-version: 10406996
+        packages: |
+          platforms;android-33
+          build-tools;33.0.2
+          ndk;25.2.9519653
+          platform-tools
     
     - name: 安装系统依赖
       run: |
