--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 120
     
     steps:
@@ -17,23 +17,36 @@ jobs:
     - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.8'
     
     - name: 设置Java环境
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
+        distribution: 'adopt'
         java-version: '8'
     
-    - name: 设置Android SDK
-      uses: android-actions/setup-android@v3
-      with:
-        cmdline-tools-version: 9477386
-        packages: |
-          platforms;android-30
-          build-tools;30.0.3
-          ndk;23.2.8568313
-          platform-tools
+    - name: 安装Android SDK
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget unzip openjdk-8-jdk
+        
+        # 下载并安装Android SDK
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
+        unzip -q commandlinetools-linux-*_latest.zip
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        mv cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        
+        # 设置环境变量
+        export ANDROID_HOME=$HOME/android-sdk
+        export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+        echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $GITHUB_ENV
+        echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
+        
+        # 安装SDK组件
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-28" "build-tools;28.0.3" "platform-tools" "ndk;21.4.7075529"
     
     - name: 安装系统依赖
       run: |
@@ -45,8 +58,8 @@ jobs:
     - name: 安装Python依赖
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install buildozer==1.4.0 cython==0.29.36
-        pip install kivy[base]==2.1.0 kivymd
+        pip install buildozer==1.4.0 cython==0.29.32
+        pip install kivy==2.0.0
         pip install pandas pdfplumber openpyxl xlsxwriter
     
     - name: 缓存buildozer依赖
