--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,62 +1,103 @@
-[app]
+name: "Build PDF Excel Android App"
 
-# (str) Title of your application
-title = PDF转Excel转换工具
+on:
+  push:
+    branches: [ main, master ]
+  workflow_dispatch:
 
-# (str) Package name
-package.name = pdftoexcel
-
-# (str) Package domain (needed for android packaging)
-package.domain = com.pdftools.converter
-
-# (str) Source code where the main.py live
-source.dir = .
-
-# (list) Source files to include (let empty to include all the files)
-source.include_exts = py,png,jpg,kv,atlas
-
-# (str) Application versioning (method 1)
-version = 1.0
-
-# (list) Application requirements
-requirements = python3,kivy,pandas,pdfplumber,openpyxl,xlsxwriter
-
-# (str) Presplash of the application
-#presplash.filename = %(source.dir)s/data/presplash.png
-
-# (str) Icon of the application
-#icon.filename = %(source.dir)s/data/icon.png
-
-# (str) Supported orientation (landscape, sensorLandscape, portrait, sensorPortrait or all)
-orientation = portrait
-
-[buildozer]
-
-# (int) Log level (0 = error only, 1 = info, 2 = debug (with command output))
-log_level = 2
-
-[android]
-
-# (bool) Indicate if the application should be fullscreen or not
-fullscreen = 0
-
-# (list) Permissions
-android.permissions = READ_EXTERNAL_STORAGE,WRITE_EXTERNAL_STORAGE
-
-# (int) Target Android API, should be as high as possible.
-android.api = 28
-
-# (int) Minimum API your APK will support.
-android.minapi = 21
-
-# (str) Android NDK version to use
-android.ndk = 21.4.7075529
-
-# (str) Android SDK version to use
-android.sdk = 28
-
-# (str) Android build tools version
-android.build_tools = 28.0.3
-
-# (bool) Use --private data storage (True) or --dir public storage (False)
-android.private_storage = False
+jobs:
+  build:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 120
+    
+    steps:
+    - name: "Checkout code"
+      uses: actions/checkout@v4
+    
+    - name: "Setup Python"
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+    
+    - name: "Setup Java"
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'adopt'
+        java-version: '8'
+    
+    - name: "Install Android SDK"
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget unzip openjdk-8-jdk
+        
+        # Download and install Android SDK
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
+        unzip -q commandlinetools-linux-*_latest.zip
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        mv cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        
+        # Set environment variables
+        export ANDROID_HOME=$HOME/android-sdk
+        export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+        echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $GITHUB_ENV
+        echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
+        
+        # Install SDK components
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-28" "build-tools;28.0.3" "platform-tools" "ndk;21.4.7075529"
+    
+    - name: "Install system dependencies"
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y autoconf libtool pkg-config \
+          zlib1g-dev libncurses5-dev libncursesw5-dev libncurses-dev cmake \
+          libffi-dev libssl-dev build-essential python3-dev git
+    
+    - name: "Install Python dependencies"
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install buildozer==1.4.0 cython==0.29.32
+        pip install kivy==2.0.0
+        pip install pandas pdfplumber openpyxl xlsxwriter
+    
+    - name: "Cache buildozer dependencies"
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.buildozer
+        key: buildozer-cache-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
+        restore-keys: |
+          buildozer-cache-${{ runner.os }}-
+    
+    - name: "Build APK"
+      run: |
+        echo "Starting Android APK build..."
+        buildozer android debug --verbose
+        echo "Build completed"
+    
+    - name: "Verify build results"
+      run: |
+        if [ -f bin/*.apk ]; then
+          echo "APK build successful!"
+          ls -la bin/
+          echo "File size: $(du -h bin/*.apk)"
+        else
+          echo "APK build failed"
+          ls -la
+          exit 1
+        fi
+    
+    - name: "Rename APK file"
+      run: |
+        cd bin
+        mv *.apk pdf-excel-converter.apk
+        echo "APK file renamed"
+    
+    - name: "Upload APK file"
+      uses: actions/upload-artifact@v4
+      with:
+        name: pdf-excel-android-app
+        path: bin/pdf-excel-converter.apk
+        retention-days: 90
