--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,32 +11,32 @@ jobs:
     timeout-minutes: 120
     
     steps:
-    - name: "Checkout code"
+    - name: 检出代码
       uses: actions/checkout@v4
     
-    - name: "Setup Python"
+    - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
         python-version: '3.8'
     
-    - name: "Setup Java"
+    - name: 设置Java环境
       uses: actions/setup-java@v4
       with:
         distribution: 'adopt'
         java-version: '8'
     
-    - name: "Install Android SDK"
+    - name: 安装Android SDK
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip openjdk-8-jdk
         
-        # Download and install Android SDK
+        # 下载并安装Android SDK
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
         unzip -q commandlinetools-linux-*_latest.zip
         mkdir -p $HOME/android-sdk/cmdline-tools
         mv cmdline-tools $HOME/android-sdk/cmdline-tools/latest
         
-        # Set environment variables
+        # 设置环境变量
         export ANDROID_HOME=$HOME/android-sdk
         export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
         echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
@@ -44,25 +44,25 @@ jobs:
         echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
         
-        # Install SDK components
+        # 安装SDK组件
         yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
         $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-28" "build-tools;28.0.3" "platform-tools" "ndk;21.4.7075529"
     
-    - name: "Install system dependencies"
+    - name: 安装系统依赖
       run: |
         sudo apt-get update
         sudo apt-get install -y autoconf libtool pkg-config \
           zlib1g-dev libncurses5-dev libncursesw5-dev libncurses-dev cmake \
           libffi-dev libssl-dev build-essential python3-dev git
     
-    - name: "Install Python dependencies"
+    - name: 安装Python依赖
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install buildozer==1.4.0 cython==0.29.32
         pip install kivy==2.0.0
         pip install pandas pdfplumber openpyxl xlsxwriter
     
-    - name: "Cache buildozer dependencies"
+    - name: 缓存buildozer依赖
       uses: actions/cache@v4
       with:
         path: |
@@ -71,31 +71,31 @@ jobs:
         restore-keys: |
           buildozer-cache-${{ runner.os }}-
     
-    - name: "Build APK"
+    - name: 编译APK
       run: |
-        echo "Starting Android APK build..."
+        echo "开始编译Android APK..."
         buildozer android debug --verbose
-        echo "Build completed"
+        echo "编译完成"
     
-    - name: "Verify build results"
+    - name: 验证编译结果
       run: |
         if [ -f bin/*.apk ]; then
-          echo "APK build successful!"
+          echo "APK编译成功！"
           ls -la bin/
-          echo "File size: $(du -h bin/*.apk)"
+          echo "文件大小: $(du -h bin/*.apk)"
         else
-          echo "APK build failed"
+          echo "APK编译失败"
           ls -la
           exit 1
         fi
     
-    - name: "Rename APK file"
+    - name: 重命名APK文件
       run: |
         cd bin
         mv *.apk pdf-excel-converter.apk
-        echo "APK file renamed"
+        echo "APK文件已重命名"
     
-    - name: "Upload APK file"
+    - name: 上传APK文件
       uses: actions/upload-artifact@v4
       with:
         name: pdf-excel-android-app
