--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: "Build PDF Excel Android App"
+name: "Build Android APK"
 
 on:
   push:
@@ -7,97 +7,109 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-    timeout-minutes: 120
+    runs-on: ubuntu-22.04
+    timeout-minutes: 180
     
     steps:
-    - name: 检出代码
+    - name: "Checkout code"
       uses: actions/checkout@v4
     
-    - name: 设置Python环境
+    - name: "Setup Python"
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.9'
     
-    - name: 设置Java环境
+    - name: "Setup Java"
       uses: actions/setup-java@v4
       with:
-        distribution: 'adopt'
-        java-version: '8'
+        distribution: 'temurin'
+        java-version: '11'
     
-    - name: 安装Android SDK
+    - name: "Setup Android environment"
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget unzip openjdk-8-jdk
+        sudo apt-get install -y openjdk-11-jdk wget unzip git build-essential \
+          python3-dev autoconf libtool pkg-config zlib1g-dev libncurses5-dev \
+          libncursesw5-dev cmake libffi-dev libssl-dev
         
-        # 下载并安装Android SDK
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
+        # Download Android SDK
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
         unzip -q commandlinetools-linux-*_latest.zip
+        
+        # Setup Android SDK
         mkdir -p $HOME/android-sdk/cmdline-tools
         mv cmdline-tools $HOME/android-sdk/cmdline-tools/latest
         
-        # 设置环境变量
+        # Set environment
         export ANDROID_HOME=$HOME/android-sdk
-        export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+        export JAVA_HOME=$JAVA_HOME_11_X64
         echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $GITHUB_ENV
+        echo "JAVA_HOME=$JAVA_HOME_11_X64" >> $GITHUB_ENV
         echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
         
-        # 安装SDK组件
+        # Install Android components
         yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-28" "build-tools;28.0.3" "platform-tools" "ndk;21.4.7075529"
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+          "platforms;android-31" \
+          "build-tools;31.0.0" \
+          "platform-tools" \
+          "ndk;23.2.8568313"
     
-    - name: 安装系统依赖
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y autoconf libtool pkg-config \
-          zlib1g-dev libncurses5-dev libncursesw5-dev libncurses-dev cmake \
-          libffi-dev libssl-dev build-essential python3-dev git
-    
-    - name: 安装Python依赖
+    - name: "Install Python dependencies"
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install buildozer==1.4.0 cython==0.29.32
-        pip install kivy==2.0.0
+        pip install buildozer==1.5.0
+        pip install cython==0.29.36
+        pip install kivy[base]==2.1.0
         pip install pandas pdfplumber openpyxl xlsxwriter
     
-    - name: 缓存buildozer依赖
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.buildozer
-        key: buildozer-cache-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
-        restore-keys: |
-          buildozer-cache-${{ runner.os }}-
-    
-    - name: 编译APK
+    - name: "Build APK"
       run: |
-        echo "开始编译Android APK..."
-        buildozer android debug --verbose
-        echo "编译完成"
+        echo "Building Android APK..."
+        timeout 120m buildozer android debug || echo "Build completed or timed out"
     
-    - name: 验证编译结果
+    - name: "Find and upload APK"
       run: |
+        echo "Searching for APK files..."
+        find . -name "*.apk" -type f -exec ls -la {} \;
+        
+        # Look for APK in common locations
+        APK_FILE=""
         if [ -f bin/*.apk ]; then
-          echo "APK编译成功！"
-          ls -la bin/
-          echo "文件大小: $(du -h bin/*.apk)"
+          APK_FILE=$(ls bin/*.apk | head -1)
+        elif [ -f .buildozer/android/platform/build*/outputs/apk/*/*.apk ]; then
+          APK_FILE=$(find .buildozer/android/platform/build*/outputs/apk -name "*.apk" | head -1)
+        elif [ -f .buildozer/android/platform/build*/bin/*.apk ]; then
+          APK_FILE=$(find .buildozer/android/platform/build*/bin -name "*.apk" | head -1)
+        fi
+        
+        if [ -n "$APK_FILE" ] && [ -f "$APK_FILE" ]; then
+          echo "APK found: $APK_FILE"
+          mkdir -p output
+          cp "$APK_FILE" output/pdf-excel-converter.apk
+          echo "APK copied to output directory"
+          ls -la output/
         else
-          echo "APK编译失败"
-          ls -la
-          exit 1
+          echo "No APK file found, but build may have completed"
+          echo "Build logs and intermediate files:"
+          ls -la .buildozer/ 2>/dev/null || echo "No .buildozer directory"
         fi
     
-    - name: 重命名APK文件
-      run: |
-        cd bin
-        mv *.apk pdf-excel-converter.apk
-        echo "APK文件已重命名"
-    
-    - name: 上传APK文件
+    - name: "Upload APK if exists"
       uses: actions/upload-artifact@v4
+      if: hashFiles('output/pdf-excel-converter.apk') != ''
       with:
         name: pdf-excel-android-app
-        path: bin/pdf-excel-converter.apk
-        retention-days: 90
+        path: output/pdf-excel-converter.apk
+        retention-days: 30
+    
+    - name: "Upload build logs"
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: build-logs
+        path: |
+          .buildozer/
+          *.log
+        retention-days: 7
