--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,20 +55,24 @@ jobs:
         echo "JAVA_HOME=$JAVA_HOME_8_X64" >> $GITHUB_ENV
         echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
-        echo "$HOME/android-sdk/build-tools/28.0.3" >> $GITHUB_PATH
+        echo "$HOME/android-sdk/build-tools/30.0.3" >> $GITHUB_PATH
         
-        # Accept all licenses first
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        # Accept all licenses with auto-confirmation
+        echo "y" | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+        echo "y" | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --update || true
         
-        # Install specific versions that work together
+        # Install compatible SDK components
         $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager \
-          "platforms;android-28" \
-          "build-tools;28.0.3" \
+          "platforms;android-30" \
+          "build-tools;30.0.3" \
           "platform-tools" \
-          "ndk;21.4.7075529"
+          "ndk;21.4.7075529" || true
+        
+        # Install fallback build-tools if needed
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;29.0.3" || true
         
         # Verify AIDL installation
-        ls -la $HOME/android-sdk/build-tools/28.0.3/aidl || echo "AIDL not found"
+        find $HOME/android-sdk -name "aidl" -type f 2>/dev/null || echo "Searching for AIDL..."
     
     - name: Build APK
       run: |
