--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,15 @@ name: Build Android APK
 
 on:
   workflow_dispatch:
+    inputs:
+      build_type:
+        description: 'Build type'
+        required: true
+        default: 'debug'
+        type: choice
+        options:
+        - debug
+        - release
   push:
     branches: [main, master]
 
@@ -35,7 +44,7 @@ jobs:
           pip install cython==0.29.32
           pip install kivy==2.1.0
           pip install buildozer==1.4.0
-          pip install pandas pdfplumber openpyxl xlsxwriter
+          pip install -r requirements.txt
 
       - name: Setup Android SDK
         run: |
@@ -54,7 +63,7 @@ jobs:
           echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > $HOME/android-sdk/licenses/android-sdk-license
           echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $HOME/android-sdk/licenses/android-sdk-license
           echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" >> $HOME/android-sdk/licenses/android-sdk-license
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-28" "build-tools;28.0.3" "platform-tools"
+          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-33" "build-tools;33.0.0" "platform-tools" "ndk;23.2.8568313"
           which aidl
           aidl --version || echo "System AIDL ready"
 
