--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install system dependencies
+      - name: Install system dependencies including AIDL
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -41,7 +41,14 @@ jobs:
             autoconf libtool pkg-config zlib1g-dev \
             libncurses5-dev libncursesw5-dev cmake \
             libffi-dev libssl-dev build-essential \
-            libltdl-dev ccache
+            libltdl-dev ccache \
+            aidl android-tools-adb android-tools-fastboot
+
+      - name: Verify AIDL installation
+        run: |
+          which aidl || echo "AIDL not found in PATH"
+          aidl --version || echo "AIDL version check failed"
+          dpkg -l | grep aidl || echo "AIDL package not installed"
 
       - name: Setup ccache
         run: |
@@ -99,9 +106,39 @@ jobs:
             "platform-tools" \
             "ndk;26.1.10909125"
 
-      - name: Build APK
+      - name: Setup AIDL path and verify
         run: |
-          echo "Building APK..."
+          # 确保系统AIDL在PATH中
+          export PATH="/usr/bin:$PATH"
+          echo "/usr/bin" >> $GITHUB_PATH
+          
+          # 验证AIDL可用性
+          echo "Checking AIDL availability:"
+          which aidl
+          aidl --version
+          
+          # 创建AIDL符号链接（如果需要）
+          if [ ! -f "$HOME/android-sdk/build-tools/34.0.0/aidl" ]; then
+            ln -sf /usr/bin/aidl "$HOME/android-sdk/build-tools/34.0.0/aidl"
+          fi
+          
+          echo "AIDL setup completed"
+
+      - name: Build APK with AIDL support
+        run: |
+          echo "Building APK with AIDL support..."
+          export PATH="/usr/bin:$HOME/android-sdk/build-tools/34.0.0:$PATH"
+          
+          # 验证构建环境
+          echo "=== Build Environment ==="
+          echo "AIDL location: $(which aidl)"
+          echo "AIDL version: $(aidl --version)"
+          echo "Java version: $(java -version)"
+          echo "Python version: $(python --version)"
+          echo "Buildozer version: $(buildozer --version)"
+          echo "========================="
+          
+          # 开始构建
           buildozer android debug
 
       - name: Find and prepare APK
@@ -150,32 +187,12 @@ jobs:
           path: output/pdf-excel-converter.apk
           retention-days: 30
 
-      - name: Create Release (if tag)
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+      - name: Upload build logs (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
         with:
-          files: output/pdf-excel-converter.apk
-          name: PDF to Excel Converter v${{ github.ref_name }}
-          body: |
-            ## PDF到Excel转换工具 Android APK
-            
-            ### 功能特性
-            - 📄 PDF文件读取和解析
-            - 📊 智能表格数据提取
-            - 🔄 自动数据处理和格式化
-            - 💾 Excel文件生成和保存
-            - 📱 安卓原生界面
-            
-            ### 安装说明
-            1. 下载APK文件
-            2. 在安卓设备上启用"未知来源"安装
-            3. 安装APK文件
-            4. 授予存储权限
-            
-            ### 系统要求
-            - Android 5.0+ (API 21+)
-            - 存储空间: 100MB+
-            
-            **APK大小**: ${{ env.APK_SIZE }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: build-logs-${{ github.run_number }}
+          path: |
+            .buildozer/logs/
+            *.log
+          retention-days: 7
